--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "storm-react-diagrams",
-	"version": "5.1.1",
+	"name": "@novemberfive/storm-react-diagrams",
+	"version": "5.2.0",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/projectstorm/react-diagrams.git"
@@ -22,13 +22,16 @@
 	"scripts": {
 		"build:ts": "webpack",
 		"build:ts:prod": "cross-env NODE_ENV=production webpack",
-		"build:sass:prod": "node-sass --output-style compressed ./src/sass/main.scss > ./dist/style.min.css",
+		"build:sass:prod":
+			"node-sass --output-style compressed ./src/sass/main.scss > ./dist/style.min.css",
 		"storybook": "start-storybook -p 9001 -c .storybook",
 		"storybook:build": "build-storybook -c .storybook -o .out",
 		"storybook:github": "storybook-to-ghpages",
-		"pretty": "prettier --use-tabs --write \"{src,demos,tests}/**/*.{ts,tsx}\" --print-width 120",
+		"pretty":
+			"prettier --use-tabs --write \"{src,demos,tests}/**/*.{ts,tsx}\" --print-width 120",
 		"lint": "tslint -p .",
-		"test:ci": "rm -rf ./dist && node ./tests/e2e/generate-e2e.js && jest --no-cache",
+		"test:ci":
+			"rm -rf ./dist && node ./tests/e2e/generate-e2e.js && jest --no-cache",
 		"test": "jest --no-cache",
 		"prepublishOnly": "yarn run build:ts:prod && yarn run build:sass:prod"
 	},
@@ -77,8 +80,8 @@
 		"storybook-readme": "^3.2.1",
 		"style-loader": "^0.20.3",
 		"ts-jest": "^22.4.1",
-		"tslint": "^5.9.1",
 		"ts-loader": "^4.1.0",
+		"tslint": "^5.9.1",
 		"typescript": "^2.7.2",
 		"uglifyjs-webpack-plugin": "^1.2.3",
 		"val-loader": "^1.1.0",
